[gd_scene load_steps=2 format=2]

[ext_resource path="res://addons/explore-editor-theme/lists/FontListItem.gd" type="Script" id=1]

[node name="FontListItem" type="Panel" groups=[
"ETE_FontItems",
]]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackgroundPanel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Layout" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FontName" type="Label" parent="Layout"]
margin_right = 1024.0
margin_bottom = 14.0

[node name="FontSample" type="Label" parent="Layout"]
margin_top = 18.0
margin_right = 1024.0
margin_bottom = 32.0
text = "Sample Text"
clip_text = true
